feat:ly-trip旅途项目详情页部分搭建

--- a/ly-trip/src/assets/css/common.css
+++ b/ly-trip/src/assets/css/common.css
@@ -16,3 +16,10 @@ body {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
+.icon_check {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url(../imgs/detail/icon_check.png) 0 0 / 100% 100%;
+}
